call function without parameters ub pagination_controller.rs
line 107

--- a/templates/pagination_page.hbs
+++ b/templates/pagination_page.hbs
@@ -6,8 +6,15 @@
 </head>
 <body>
 <p>
+    {{#each tiger}}
+    <a href="/posts/{{this.title}}">
+        {{#each this}}  " "
+            {{ this }}
+        {{/each}}<br>
+    {{/each}}</a>
+<P>
 <ul>
-
+{{tiger}}
 
 
 </ul>
