able to create new posts form browser

--- a/templates/new_post.hbs
+++ b/templates/new_post.hbs
@@ -5,7 +5,9 @@
 </head>
 <body>
 <form action="http://localhost:8080/recieved" method="post">
-    <input type="text" name="username" placeholder="Username">
+    <input type="text" name="title" placeholder="title"><br>
+    <input type="text" name="description" placeholder="description"><br>
+    <input type="text" name="name" placeholder="name"><br>
     <input type="submit" value="Submit">
 </form>
 </body>
