almost delete category done

--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -8,7 +8,7 @@
 
 <ul class="listing category">
     {{#each o}}
-        <a href="/categories/{{this}}"><li>{{this}}</li></a>
+        <a href="/categories/{{this}}"><li>{{this}}</li></a> <a href="/delete/{{this}}">Delete</a>
     {{/each}}
 </ul>
 
