--- a/templates/new_post.hbs
+++ b/templates/new_post.hbs
@@ -4,7 +4,7 @@
     <title>POST Form</title>
 </head>
 <body>
-<form action="http://localhost:8080/recieved" method="post">
+<form action="http://localhost:8080/new_received" method="post">
     <input type="text" name="title" placeholder="title"><br>
     <input type="text" name="description" placeholder="description"><br>
     <input type="text" name="name" placeholder="name"><br>
