--- a/templates/pagination_page.hbs
+++ b/templates/pagination_page.hbs
@@ -10,7 +10,7 @@
     <a href="/posts/{{this.title}}">
         {{#each this}}  " "
             {{ this }}
-        {{/each}}<a href="/delete_post/{{this.title}}">Delete </a> <br>
+        {{/each}}"   "<a href="/delete_post/{{this.title}}">Delete </a> "    "<a href="/update_post/{{this.title}}">update </a> <br>
     {{/each}}</a>
 <P>
 <ul>
