--- a/templates/pagination_page.hbs
+++ b/templates/pagination_page.hbs
@@ -1,10 +1,79 @@
-
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Titljjjjje</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+body {
+  margin: 0;
+  font-family: "Lato", sans-serif;
+}
+
+.sidebar {
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  background-color: #f1f1f1;
+  position: fixed;
+  height: 100%;
+  overflow: auto;
+}
+
+.sidebar a {
+  display: block;
+  color: black;
+  padding: 16px;
+  text-decoration: none;
+}
+
+.sidebar a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+.sidebar a:hover:not(.active) {
+  background-color: #555;
+  color: white;
+}
+
+div.content {
+  margin-left: 200px;
+  padding: 1px 16px;
+  height: 1000px;
+}
+
+@media screen and (max-width: 700px) {
+  .sidebar {
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+  .sidebar a {float: left;}
+  div.content {margin-left: 0;}
+}
+
+@media screen and (max-width: 400px) {
+  .sidebar a {
+    text-align: center;
+    float: none;
+  }
+}
+</style>
 </head>
 <body>
+
+<div class="sidebar">
+    <a class="active" href="#home">Home</a>
+    <a href="#news">Posts only</a>
+    <a href="">Categories Only</a>
+</div>
+
+<div class="content">
+
+ <p class="listing category">
+        {{#each o}}
+            <a href="/categories/{{this}}"><li>{{this}}</a>      <a href="/delete_category/{{this}}">Delete</a></p>
+        {{/each}}
+    </p>
+
 <p>
     {{#each tiger}}
     <a href="/posts/{{this.title}}">
@@ -20,12 +89,12 @@
 </ul>
 
 
-    {{#each a}}
+    {{!--#each a}}
     <a href="/posts/{{this.title}}">
         {{#each this}}  " "
             {{ this }}
         {{/each}}<br>
-    {{/each}}</a>
+    {{/each--}}</a>
 </p>
 
 
@@ -36,6 +105,7 @@
     {{/each}}
 </div>
 
+</div>
 <!--<div class="pagination_section">-->
 
 <!--    <a href="?page=1&limit=1">1</a>-->
