ALL categories at one page not working

--- a/templates/pagination_page.hbs
+++ b/templates/pagination_page.hbs
@@ -67,7 +67,7 @@ div.content {
 </div>
 
 <div class="content">
-
+MAIN PAGE
  <p class="listing category">
         {{#each o}}
             <a href="/categories/{{this}}"><li>{{this}}</a>      <a href="/delete_category/{{this}}">Delete</a></p>
