before actix identity

--- a/templates/all_categories.hbs
+++ b/templates/all_categories.hbs
@@ -7,7 +7,7 @@
 <body>
 <p>
 asdas
-{{#each all_categories}}
+{{#each z}}
         <a href="/categories/{{this}}"><li>{{this}}</a>      <a href="/delete_category/{{this}}">Delete</a></p>
 {{/each}}
 </p>
