--- a/templates/pagination_page.hbs
+++ b/templates/pagination_page.hbs
@@ -67,7 +67,7 @@ div.content {
 </div>
 
 <div class="content">
-MAIN PAGE
+MAIN PAGE <a href="/login">Login</a>
  <p class="listing category">
         {{#each o}}
             <a href="/categories/{{this}}"><li>{{this}}</a>      <a href="/delete_category/{{this}}">Delete</a></p>
@@ -104,17 +104,9 @@ MAIN PAGE
    <a href="?page={{this}}">{{this}}</a>
     {{/each}}
 </div>
-
+    <a href="/logout">  Logout </a>
 </div>
-<!--<div class="pagination_section">-->
 
-<!--    <a href="?page=1&limit=1">1</a>-->
-<!--    <a href="?page=2&limit=1">2</a>-->
-<!--    <a href="?page=3&limit=1">3</a>-->
-<!--    <a href="?page=4&limit=1">4</a>-->
-<!--    <a href="?page=5&limit=1">5</a>-->
-
-<!--</div>-->
 </p>
 </body>
 </html>
