--- a/templates/admin_page.hbs
+++ b/templates/admin_page.hbs
@@ -2,6 +2,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
+
+
 body {
   margin: 0;
   font-family: "Lato", sans-serif;
@@ -57,17 +59,64 @@ div.content {
   }
 }
 </style>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
 
 <div class="sidebar">
     <a class="active" href="#home">Home</a>
-    <a href="#news">Posts only</a>
-    <a href="">Categories Only</a>
+    <a href="#">Posts only</a>
+    <a href="/category">Categories Only</a>
 </div>
 
 <div class="content">
-    welcome admin <a href="/login">Login</a>
+    MAIN PAGE
+
+        <div class="row">
+            <div class="col-12">
+                <table class="table table-bordered">
+                    <thead>
+                    <tr>
+                        <th scope="col">Title</th>
+                        <th scope="col" >Description</th>
+                        <th scope="col">Category</th>
+                        <th scope="col">Option</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+
+                    {{#each  tiger}}
+
+                       <td> <a href="/posts/{{this.title}}"> {{this.title}}</td>
+
+                    <td> <a href="/posts/{{this.title}}"> {{this.description}}</td>
+                    <td><a href="/posts/{{this.title}}"> {{this.name}}</td>
+                       <td> <a href="/delete_post/{{this.title}}"> Delete  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;     </a>
+                       <a href="/posts/{{this.title}}/edit"> update </a>
+                       </td>
+                    </a>
+                    </tr>
+                   {{/each}}
+
+                    </tbody>
+                </table>
+
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination">
+    {{#each pages_count }}
+                        <li class="page-item"><a class="page-link" href="?page={{this}}">{{this}}</a></li>
+    {{/each}}
+                    </ul>
+                </nav>
+
+            </div>
+        </div>
+
+
 <p class="listing category">
     {{#each o}}
         <a href="/categories/{{this}}"><li>{{this}}</a>      <a href="/delete_category/{{this}}">Delete</a></p>
@@ -79,7 +128,7 @@ div.content {
         <a href="/posts/{{this.title}}">
             {{#each this}}  " "
                 {{ this }}
-            {{/each}}"   "<a href="/delete_post/{{this.title}}">Delete </a> "    "<a href="/update_post/{{this.title}}">update </a> <br>
+            {{/each}}"   "<a href="/delete_post/{{this.title}}">Delete </a> "    "<a href="/posts/{{this.title}}/edit">update</a> <br>
         {{/each}}</a>
     <P>
     <ul>
@@ -104,9 +153,18 @@ div.content {
             <a href="?page={{this}}">{{this}}</a>
         {{/each}}
     </div>
-    <a href="/logout">  Logout </a>
-</div>
+asdas
 
+</div>
+<!--<div class="pagination_section">-->
+
+<!--    <a href="?page=1&limit=1">1</a>-->
+<!--    <a href="?page=2&limit=1">2</a>-->
+<!--    <a href="?page=3&limit=1">3</a>-->
+<!--    <a href="?page=4&limit=1">4</a>-->
+<!--    <a href="?page=5&limit=1">5</a>-->
+
+<!--</div>-->
 </p>
 </body>
 </html>
