--- a/templates/new_post.hbs
+++ b/templates/new_post.hbs
@@ -4,10 +4,21 @@
     <title>POST Form</title>
 </head>
 <body>
-<form action="http://localhost:8080/new_received" method="post">
+{{#each all_categories}}
+{{this.name}}
+{{/each}}
+<form action="http://localhost:8080/posts" method="post">
     <input type="text" name="title" placeholder="title"><br>
     <input type="text" name="description" placeholder="description"><br>
-    <input type="text" name="name" placeholder="name"><br>
+<select name="text" id="name" name="name">
+
+    {{#each all_categories}}
+        <option value="{{this.name}}">{{this.name}}</option>
+
+{{/each}}
+</select>
+
+    <!--    <input type="text" name="name" placeholder="name"><br>-->
     <input type="submit" value="Submit">
 </form>
 </body>
