--- a/templates/pagination_page.hbs
+++ b/templates/pagination_page.hbs
@@ -67,46 +67,57 @@ div.content {
 </div>
 
 <div class="content">
-MAIN PAGE <a href="/login">Login</a>
- <p class="listing category">
-        {{#each o}}
-            <a href="/categories/{{this}}"><li>{{this}}</a>      <a href="/delete_category/{{this}}">Delete</a></p>
-        {{/each}}
+    MAIN PAGE
+<p class="listing category">
+    {{#each o}}
+        <a href="/categories/{{this}}"><li>{{this}}</a>      <a href="/delete_category/{{this}}">Delete</a></p>
+    {{/each}}
     </p>
 
-<p>
-    {{#each tiger}}
-    <a href="/posts/{{this.title}}">
-        {{#each this}}  " "
-            {{ this }}
-        {{/each}}"   "<a href="/delete_post/{{this.title}}">Delete </a> "    "<a href="/update_post/{{this.title}}">update </a> <br>
-    {{/each}}</a>
-<P>
-<ul>
+    <p>
+        {{#each tiger}}
+        <a href="/posts/{{this.title}}">
+            {{#each this}}  " "
+                {{ this }}
+            {{/each}}"   "<a href="/delete_post/{{this.title}}">Delete </a> "    "<a href="/update_post/{{this.title}}">update </a> <br>
+        {{/each}}</a>
+    <P>
+    <ul>
 
 
 
-</ul>
+    </ul>
 
 
-    {{!--#each a}}
-    <a href="/posts/{{this.title}}">
-        {{#each this}}  " "
-            {{ this }}
-        {{/each}}<br>
-    {{/each--}}</a>
-</p>
+        {{!--#each a}}
+        <a href="/posts/{{this.title}}">
+            {{#each this}}  " "
+                {{ this }}
+            {{/each}}<br>
+        {{/each--}}</a>
+    </p>
 
 
 
-<div class="pagination_logic">
-    {{#each pages_count }}
-   <a href="?page={{this}}">{{this}}</a>
-    {{/each}}
+    <div class="pagination_logic">
+        {{#each pages_count }}
+            <a href="?page={{this}}">{{this}}</a>
+        {{/each}}
+    </div>
+
 </div>
-    <a href="/logout">  Logout </a>
-</div>
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
+</div>
+<!--<div class="pagination_section">-->
+
+<!--    <a href="?page=1&limit=1">1</a>-->
+<!--    <a href="?page=2&limit=1">2</a>-->
+<!--    <a href="?page=3&limit=1">3</a>-->
+<!--    <a href="?page=4&limit=1">4</a>-->
+<!--    <a href="?page=5&limit=1">5</a>-->
+
+<!--</div>-->
 </p>
 </body>
 </html>
