--- a/templates/new_post.hbs
+++ b/templates/new_post.hbs
@@ -7,7 +7,7 @@
 {{#each all_categories}}
 {{this.name}}
 {{/each}}
-<form action="http://localhost:8080/posts" method="post">
+<form action="http://localhost:8080/new_post" method="post">
     <input type="text" name="title" placeholder="title"><br>
     <input type="text" name="description" placeholder="description"><br>
 <select name="text" id="name" name="name">
@@ -18,7 +18,7 @@
 {{/each}}
 </select>
 
-    <!--    <input type="text" name="name" placeholder="name"><br>-->
+        <input type="text" name="name" placeholder="name"><br>
     <input type="submit" value="Submit">
 </form>
 </body>
