--- a/templates/login.hbs
+++ b/templates/login.hbs
@@ -22,7 +22,7 @@
 
 
                 <button>login</button>
-                <p class="message">Not registered? <a href="#">Create an account</a></p>
+                <p class="message">Not registered? <a href="/register">Create an account</a></p>
             </form>
         </div>
     </div>
