password encryption and decryption done

--- a/templates/admin_page.hbs
+++ b/templates/admin_page.hbs
@@ -157,7 +157,7 @@ div.content {
 <!--            <a href="?page={{this}}">{{this}}</a>-->
 <!--        {{/each--}}-->
 <!--    </div>-->
-    <button type="button" href="/logout">Logout</button>
+    <button type="button"> <a href="/logout">Logout</a></button>
 
 </div>
 <!--<div class="pagination_section">-->
