--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -5,7 +5,8 @@
     <title>Titljjjjje</title>
 </head>
 <body>
-<a href="/login">Login</a>
+<a href="/login">Login</a>     <a href="/register">Register</a>
+
 <ul class="listing category">
     {{#each o}}
         <a href="/categories/{{this}}"><li>{{this}}</li></a> <a href="/delete_category/{{this}}">Delete</a>
